--- a/index.html
+++ b/index.html
@@ -3,12 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Moringa School</title> 
 </head>
 <body>
     <h1>Lorem</h1>
     <p>
         Lorem ipsum dolor sit amet consectetur adipisicing elit. At, aliquam quam officia est, quidem tempore excepturi, odio praesentium laborum beatae eveniet eius quod aperiam inventore! Quam nulla ad quidem nobis.
     </p>
+    <ul>
+        <li>Home</li>
+        <li>About us</li>
+        <li>Contact us</li>
+        <li>Services</li>
+    </ul>
+    <h1>Courses offered</h1>
+    <ol type="a">
+        <li>Software engineering</li>
+        <li>Product design</li>
+        <li>Data Science</li>
+        <li>Cyber Security</li>
+    </ol>
 </body>
 </html>
